--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="andrious">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
+  <link href="https://gregperrypage.blogspot.com/favicon.ico" rel="icon" type="image/x-icon">
   <title>andrious</title>
   <link rel="manifest" href="manifest.json">
   <style>
