--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="andrious">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <link href="https://gregperrypage.blogspot.com/favicon.ico" rel="icon" type="image/x-icon">
-  <title>andrious</title>
+  <title>Andrious Solutions</title>
   <link rel="manifest" href="manifest.json">
   <style>
       @keyframes spinner {
@@ -53,7 +53,7 @@
       }
     </style>
 </head>
-<body>
+<body id="app-container">
   <div class="spin"></div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
@@ -122,5 +122,23 @@
       loadMainDartJs();
     }
   </script>
+  <!-- The core Firebase JS SDK (always required for using any firebase service) -->
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+  <!-- Firebase Auth SDK -->
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+  <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAiebh5PRrTl4T9GJk0oK1rd2n6rTXZ5-0",
+        authDomain: "explore-2aed1.firebaseapp.com",
+        databaseURL: "https://explore-2aed1.firebaseio.com",
+        projectId: "explore-2aed1",
+        storageBucket: "explore-2aed1.appspot.com",
+        messagingSenderId: "949465561283",
+        appId: "1:949465561283:web:d2ed3a8f7bf1e8b7cc0a76",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
 </body>
 </html>
