--- a/index.html
+++ b/index.html
@@ -23,16 +23,45 @@
   <meta name="apple-mobile-web-app-title" content="andrious">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>andrious</title>
+  <title>Andrious Solutions</title>
   <link rel="manifest" href="manifest.json">
+
+    <style>
+      @keyframes spinner {
+        0% {
+          transform: translate3d(-50%, -50%, 0) rotate(0deg);
+        }
+        100% {
+          transform: translate3d(-50%, -50%, 0) rotate(360deg);
+        }
+      }
+      .spin::before {
+        animation: 1.5s linear infinite spinner;
+        animation-play-state: inherit;
+        border: solid 5px #cfd0d1;
+        border-bottom-color: #1c87c9;
+        border-radius: 50%;
+        content: "";
+        height: 40px;
+        width: 40px;
+        position: absolute;
+        top: 10%;
+        left: 10%;
+        transform: translate3d(-50%, -50%, 0);
+        will-change: transform;
+      }
+    </style>
 </head>
 <body>
+<center>
+  <div class="spin"></div>
+</center>
  <!-- 8.6.1, 8.10.0, 9.0.2 -->
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <!-- Add Firebase products that you want to use -->
 <!--  <script src=https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js></script>-->
   <script type="module">
-    // Import the initializeApp function you need to
+   // Import the initializeApp function you need to
    //import { initializeApp } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js";
    import { initializeApp } from "firebase/app";
     // TODO: Add SDKs for Firebase products that you want to use
@@ -60,7 +89,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '4292558789';
+    var serviceWorkerVersion = '2363484173';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
