--- a/index.html
+++ b/index.html
@@ -153,5 +153,12 @@
       loadMainDartJs();
     }
   </script>
+  <noscript>
+    <h1>Winnipeg Software Company</h1>
+       <h2>Flutter</h2>
+    <p>Local Winnipeg company developing apps using Google's cross-platform SDK called <span>Flutter</span> to create mobile applications as well as software to run on the Web as a Flutter Web app or as a Windows even Linux application using the Flutter desktop.</p>
+         <p>Flutter officially launched on Dec. 4th, 2018. I began working in Flutter nine months earlier after working 17 years in a sea of cubicles. I started my own company Andrious Solutions (corporation# 9363076) and recently moved to Winnipeg.</p>
+         <p>I did become a prominent contributor to the Flutter community having written a number of technical articles and released some 12 libraries called Dart packages for Flutter developers. Winnipeg Manitoba software developer.</p>
+  </noscript>
 </body>
 </html>
