--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <meta name="keywords" content="winnipeg, manitoba, software, developer, applications, apps, mobile, web, desktop, Flutter, local, programming, cross-platform, development">
   <meta name="google-site-verification" content="2981likZeSSTtUBxFw7Yo2AMXD2vKUw7Ot3TcHM9PyA" />
 
-
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -56,6 +55,41 @@
     </style>
 </head>
 <body>
+<center>
+  <div class="spin"></div>
+</center>
+<!-- &lt;!&ndash; 8.6.1, 8.10.0, 9.0.2 &ndash;&gt;-->
+<!--  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>-->
+<!--  &lt;!&ndash; Add Firebase products that you want to use &ndash;&gt;-->
+<!--&lt;!&ndash;  <script src=https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js></script>&ndash;&gt;-->
+<!--  <script type="module">-->
+<!--   // Import the initializeApp function you need to-->
+<!--   //import { initializeApp } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js";-->
+<!--   import { initializeApp } from "firebase/app";-->
+<!--    // TODO: Add SDKs for Firebase products that you want to use-->
+<!--    // https://firebase.google.com/docs/web/setup#available-libraries-->
+<!--    // Import the functions you need from the SDKs you need-->
+
+<!--&lt;!&ndash;    import { getAnalytics } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js";&ndash;&gt;-->
+
+<!--&lt;!&ndash;    import { getFirestore } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js";&ndash;&gt;-->
+
+<!--    // Your web app's Firebase configuration-->
+<!--    var firebaseConfig = {-->
+<!--      apiKey: "AIzaSyA-xhGqjXGnK9169RsSnn1DjjF4lt9oGGo",-->
+<!--      authDomain: "andrious-solutions-ltd-website.firebaseapp.com",-->
+<!--      projectId: "andrious-solutions-ltd-website",-->
+<!--      storageBucket: "andrious-solutions-ltd-website.appspot.com",-->
+<!--      messagingSenderId: "851900427720",-->
+<!--      appId: "1:851900427720:web:ebb85d03a4b6c4c7a1e4fd"-->
+<!--    };-->
+
+<!--    // Initialize Firebase-->
+<!--    const app = initializeApp(firebaseConfig);-->
+<!--  </script>-->
+  <!-- This script installs service_worker.js to provide PWA functionality to
+       application. For more information, see:
+       https://developers.google.com/web/fundamentals/primers/service-workers -->
 <noscript>
   <h1>Winnipeg Software Company</h1>
   <h2>Flutter</h2>
@@ -63,43 +97,8 @@
   <p>Flutter officially launched on Dec. 4th, 2018. I began working in Flutter nine months earlier after working 17 years in a sea of cubicles. I started my own company Andrious Solutions (corporation# 9363076) and recently moved to Winnipeg.</p>
   <p>I did become a prominent contributor to the Flutter community having written a number of technical articles and released some 12 libraries called Dart packages for Flutter developers. Winnipeg Manitoba software developer.</p>
 </noscript>
-<center>
-  <div class="spin"></div>
-</center>
- <!-- 8.6.1, 8.10.0, 9.0.2 -->
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-  <!-- Add Firebase products that you want to use -->
-<!--  <script src=https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js></script>-->
-  <script type="module">
-   // Import the initializeApp function you need to
-   //import { initializeApp } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js";
-   import { initializeApp } from "firebase/app";
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-    // Import the functions you need from the SDKs you need
-
-<!--    import { getAnalytics } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js";-->
-
-<!--    import { getFirestore } from "https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js";-->
-
-    // Your web app's Firebase configuration
-    var firebaseConfig = {
-      apiKey: "AIzaSyA-xhGqjXGnK9169RsSnn1DjjF4lt9oGGo",
-      authDomain: "andrious-solutions-ltd-website.firebaseapp.com",
-      projectId: "andrious-solutions-ltd-website",
-      storageBucket: "andrious-solutions-ltd-website.appspot.com",
-      messagingSenderId: "851900427720",
-      appId: "1:851900427720:web:ebb85d03a4b6c4c7a1e4fd"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-  </script>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1854305449';
+    var serviceWorkerVersion = '1260570627';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
